# spark_fraud_detection_int1414

./: .gitignore  .gitmodules  2025-08-15-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
claude-notes/: 2025-08-11-cost-effective-and-fast-way-to-run-sparkov-genera.txt  2025-08-13-explain-the-whole-generation-process-of-sparkovge.txt  2025-08-15-how-can-i-create-jobs-to-run-data-generation-and-p.txt  2025-08-15-i-cant-run-scriptsgeneratetos3py-from-root-due.txt
conf/: spark-defaults.conf
models/fraud_detection_model/metadata/: .part-00000.crc  part-00000
models/fraud_detection_model/pca/metadata/: .part-00000.crc  part-00000
models/fraud_detection_model/scaler/metadata/: .part-00000.crc  part-00000
models/fraud_detection_model/treesMetadata/: .part-00000-7e1c1bc0-f7e6-4b9a-bcb4-30a53a627419-c000.snappy.parquet.crc  part-00000-7e1c1bc0-f7e6-4b9a-bcb4-30a53a627419-c000.snappy.parquet
notebooks/: devset_analysis.py  test_cluster.py  untitled13.py
scripts/: generate_to_s3.py  run_fraud_detection.py  setup_emr_serverless.sh  submit_datagen_job.sh  submit_prediction_job.sh
spark_fraud_detection/generation/: __init__.py  customer.py  datagen.py  header.py  profile.py  transaction.py
spark_fraud_detection/ml/: __init__.py  fraud_detector.py  fraud_detector.py.bak
